--- a/landing.css
+++ b/landing.css
@@ -1,31 +1,116 @@
+
+body {
+  background-color: #EDF2F4;
+  color: #2B2D42;
+  font-family:'Lucida Sans', sans-serif;
+  margin: 0;
+}
+
+.logo-name {
+  width: 50%;
+  margin-left: 10px;
+}
+
+#header-img{
+  display: inline;
+}
+
+h1 {
+  font-family:Impact, sans-serif;
+  font-size: 30px;
+  color: #D90429;
+  top: 20px;
+  margin-top: 0;
+  text-align: center;
+  display: inline;
+}
+
+#form {
+  text-align: center;
+  margin-top: 150px;
+}
+
+.video {
+  padding: 40px;
+  margin-top: 50px;
+  background-color: #2B2D42; 
+}
+
+
+.nav-link {
+  color: #EDF2F4;
+  text-decoration: none;
+}
+
+
+
 #nav-bar {
-    display: flex;
-    justify-content: space-evenly;
-    position: fixed;
-    gap: 50px;
-    margin-bottom: 20px;
-    align-items: center;
+  display: inline;
+  gap: 20px;
+  margin-right: 20px;
+}
+
+#header {
+  height: 80px;
+  top:0; 
+  background-color: #2B2D42;
+  width: 100%;
+  position: fixed;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+#email {
+  height: 30px;
+  width: 200px;
+  margin-bottom: 15px;
+  border-radius: 10px;
+  border: none;
+  text-align: center;
+  font-size: 16px;
+  color: #8D99AE;
+}
+
+#submit {
+  height: 30px;
+  width: 100px;
+  border-radius: 10px;
+  border: none;
+  background-color: #2B2D42;
+  color: #EDF2F4;
+  font-family: 'Lucida Sans', sans-serif;
+}
+
+
+
+
+
+#virtuoso {
+  color: #EDF2F4;
+  text-align: center;
+}
+
+iframe {
+  display: block;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 400px) {
+  #header {
+    position: static;
   }
-  
-  header {
-    height: 50px;
+
+  #header {
+    height: 100px;
   }
-  
-  @media only screen and (max-width: 700px) {
-  
-  
-    #video {
-      width: 80vw;
-      height: 60vw;
-      
-    }
+}
+ 
+
+@media only screen and (max-width: 700px) {
+  iframe {
+    width: 300px;
+    height: auto;
   }
-  
-  #video {
-    margin: 0;
-  }
-  
-  .video {
-    width: 100%;
-    padding: 40px;
-  }
+}
